--- a/src/App.css
+++ b/src/App.css
@@ -10,9 +10,9 @@ header{
   flex-direction: column;
 }
 input, button{
-  padding: 10px;
-  margin: 5px;
-  background-color: bisque;
-  border: 0;
+  padding: 20px;
+  margin: 6px;
+  background-color: rgb(237, 163, 74);
+  border: 1;
   border-radius: 7px;
 }
